--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "lint-staged": "^9.5.0",
     "prettier": "^2.2.1",
     "typescript": "~4.1.5",
+    "unplugin-auto-import": "^0.5.4",
+    "unplugin-vue-components": "^0.17.10",
     "vue-jest": "^5.0.0-0"
   },
   "gitHooks": {
