--- a/package.json
+++ b/package.json
@@ -3,53 +3,45 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
     "element-plus": "^1.2.0-beta.6",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.19",
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vitejs/plugin-vue": "^2.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
-    "@vue/test-utils": "^2.0.0-0",
+    "@vue/test-utils": "^2.0.0-rc.18",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.4.5",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
-    "less": "^3.0.4",
+    "jest": "^27.4.5",
+    "jest-html-reporter": "^3.4.2",
+    "less": "^3.13.1",
     "less-loader": "^5.0.0",
-    "lint-staged": "^9.5.0",
-    "prettier": "^2.2.1",
-    "typescript": "~4.1.5",
+    "prettier": "2.5.1",
+    "ts-jest": "^27.1.2",
+    "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.5.4",
-    "unplugin-vue-components": "^0.17.10",
-    "vue-jest": "^5.0.0-0"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,vue,ts,tsx}": [
-      "vue-cli-service lint",
-      "git add"
-    ]
+    "unplugin-vue-components": "^0.17.11",
+    "vite": "^2.7.2",
+    "vue-jest": "^5.0.0-alpha.10",
+    "vue-tsc": "^0.29.8"
   }
 }
