--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "prepare": "husky install",
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
@@ -18,6 +19,8 @@
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
+    "@commitlint/cli": "^16.0.0",
+    "@commitlint/config-conventional": "^16.0.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@types/jest": "^27.0.3",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
@@ -31,10 +34,12 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.4.5",
     "jest-html-reporter": "^3.4.2",
     "less": "^3.13.1",
     "less-loader": "^5.0.0",
+    "lint-staged": "^12.1.4",
     "prettier": "2.5.1",
     "ts-jest": "^27.1.2",
     "typescript": "^4.5.4",
